# m2pa

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  VERSIONING.md  deny.toml  pyproject.toml
.github/workflows/: ci.yml  release.yaml
benches/: codec.rs
docs/: COMPARISON.md  COMPLIANCE.md  OVERVIEW.md
examples/: decode_m2pa.rs  leak_check.rs  perf_codec.rs
python/m2pa/: __init__.py  _m2pa.pyi
python/tests/: test_codec.py
scripts/: flamegraph.sh  mem_leak_test.sh
src/: error.rs  lib.rs  link_status.rs  python.rs  state_machine.rs  user_data.rs
tests/: integration.rs
