[package]
name = "m2pa"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of M2PA (RFC 4165) - MTP2 Peer-to-Peer Adaptation Layer"
authors = ["Matthias van der Vlies <mvdvlies@gmail.com>"]
license = "MIT"
repository = "https://github.com/killdashnine/m2pa"

[dependencies]
modular-bitfield-msb = "0.11.2"
hex = "0.4.3"
thiserror = "2"
