[package]
name = "m2pa"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "Pure-Rust M2PA (RFC 4165) codec + link state machine — MTP2 Peer-to-Peer Adaptation over SCTP"
authors = ["Real Time Telecom B.V."]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Real-Time-Telecom-B-V/m2pa"
homepage = "https://github.com/Real-Time-Telecom-B-V/m2pa"
keywords = ["m2pa", "ss7", "sigtran", "sctp", "mtp3"]
categories = ["network-programming", "encoding"]
# Keep CI/build scaffolding out of the crates.io package. `python/` (the wheel's
# pure-Python shim) and `pyproject.toml` ship harmlessly, but the dev-only test
# suite under `python/tests/` and the perf rig do not.
exclude = [".github/", "docs/", "perf/", "scripts/", "python/tests/"]

# cdylib  → maturin/PyO3 build the loadable extension module (the wheel).
# rlib    → crates.io consumers link this; the cdylib is inert for them.
# Building both is the standard PyO3 mixed-layout setup (pydantic-core, orjson).
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# MSB-first bitfields model the RFC 4165 Common Message Header exactly (version /
# spare / class / type / length) without hand-rolled shift-and-mask.
modular-bitfield-msb = "0.11.2"
thiserror = "2"

# Optional Python bindings (feature = "python"). Kept out of the default build so
# `cargo add m2pa` and crates.io consumers pull ZERO pyo3. pyo3 >= 0.28 defaults
# modules to `gil_used = false`, so the extension loads on free-threaded ("no-GIL")
# CPython without re-enabling the GIL. abi3-py39 → one forward-compatible wheel for
# regular CPython 3.9+ (free-threaded wheels are built version-specific instead).
pyo3 = { version = "0.29", optional = true, features = ["abi3-py39"] }

[features]
default = []
# Links libpython; enables the bindings. Used by `cargo {test,clippy} --features python`.
python = ["dep:pyo3"]
# Wheel-only: maturin sets this. `pyo3/extension-module` tells pyo3 NOT to link
# libpython, which breaks a Rust test binary — so this is NEVER enabled by
# `cargo test`/`cargo clippy` (and CI must not use `--all-features`).
extension-module = ["python", "pyo3/extension-module"]

[dev-dependencies]
# hex is used only by the examples, integration tests, and unit tests to express
# wire vectors compactly — the codec itself has no hex dependency.
hex = "0.4"
criterion = "0.8"

[[bench]]
name = "codec"
harness = false

# Optimized build with debug symbols, for flamegraphs (scripts/flamegraph.sh).
# Frame pointers (needed so perf can unwind the optimized stacks) are forced via
# RUSTFLAGS in that script — there is no stable Cargo profile key for them.
[profile.profiling]
inherits = "release"
debug = true

[lints.clippy]
# Bug-catching tier denied; style/dead-code stay at default warn (CI runs
# `cargo clippy --all-targets` and honours these levels).
correctness = { level = "deny", priority = -1 }
